--- a/readme.Rmd
+++ b/readme.Rmd
@@ -5,7 +5,7 @@ date: "10/23/2017"
 output: github_document
 ---
 
-```{r,message=FALSE}
+```{r, echo=FALSE, message=FALSE}
 #chunk options
 knitr::opts_chunk$set(echo = TRUE, message=FALSE, warning=FALSE)
 
@@ -172,7 +172,7 @@ summary(mod.select.t70) # size, waterperc, barkthick, Ca, Zn
 ```
 
 ### alpha--- don't interpret yet
-```{r, echo=FALSE}
+```{r, include=FALSE}
 summary(mod.select.alpha) # density, Zn, C
 ```
 
@@ -249,7 +249,7 @@ rand.t.test(fit.t70.cv)
 ```
 
 ### alpha --- don't interpret yet
-```{r, echo=FALSE}
+```{r, include=FALSE}
 rand.t.test(fit.alpha.cv)
 ```
 
@@ -303,7 +303,7 @@ fit.tr.alpha.cv <- crossval(fit.tr.alpha, cv.method="loo")
 **none of the community components are significant predictors**  
 
 Note: This result changed when I changed waterperc to g water/g wet weight. When waterperc was in terms of g/g dry weight, Comp05 was marginally significant
-```{r}
+```{r, echo=FALSE}
 rand.t.test(fit.tr.r2.cv)
 ```
 
@@ -311,7 +311,7 @@ rand.t.test(fit.tr.r2.cv)
 
 **none of the community components are significant predictors**  
 
-```{r}
+```{r, echo=FALSE}
 rand.t.test(fit.tr.k.cv)
 ```
 
@@ -320,12 +320,12 @@ rand.t.test(fit.tr.k.cv)
 **none of the community components are significant predictors**  
 
 Note: This result changed when I changed waterperc to g water/g wet weight. When waterperc was in terms of g/g dry weight, Comp05 was a significant predictor
-```{r}
+```{r, echo=FALSE}
 rand.t.test(fit.tr.t70.cv) 
 ```
 
 ### alpha --- don't interpret yet
-```{r}
+```{r, include=FALSE}
 rand.t.test(fit.tr.alpha.cv)
 ```
 
@@ -360,11 +360,11 @@ By phylum
 
 ## Diversity (and diversity of specific clades) as a predictor  
 
-**Note that these community matrices have NOT been filtered to include just the OTUs that are present in at least 20% of samples**
+**Note that the full community matrix was used for these analyses**
 
 *Hyp:* Greater microbial diversity (richness, Shannon diversity, ... add phylogenetic diversity) will lead to better-fitting decay models (ne.r2), faster decay (k), and less lagginess (alpha) because of the selection effect for fast decayers and complementarity among taxa for decay.  
 Hyp-Alt: Greater microbial diversity will lead to worse-fitting decay models (ne.r2), slower decay (k), and more lagginess (alpha) because taxa will be allocating more of their resources to combat one another.
-```{r}
+```{r, echo=FALSE}
 
 # summarize the diversity in each sample
 rich.df<-Calc_richOTU(taxAndFunguild, comm.otu)
@@ -398,26 +398,26 @@ H.List<-Plot_richOTUtype(rich.spdf=H.spdf,
 ### Richness
 
 **No pattern**
-```{r}
-# anova(mod.rich.r2)
-# anova(mod.rich.k)
-# anova(mod.rich.t70)
-# anova(mod.rich.alpha)
+```{r, echo=FALSE}
+anova(mod.rich.r2)
+anova(mod.rich.k)
+anova(mod.rich.t70)
+anova(mod.rich.alpha)
 ```
 
 ### Shannon's H
 
 **No pattern**
-```{r}
-# anova(mod.H.r2)
-# anova(mod.H.k)
-# anova(mod.H.t70)
-# anova(mod.H.alpha)
+```{r, echo=FALSE}
+anova(mod.H.r2)
+anova(mod.H.k)
+anova(mod.H.t70)
+anova(mod.H.alpha)
 ```
 
 *Hyp:* Greater saprotroph and basidiomycete richness will lead to better-fitting decay models (ne.r2), faster decay (k), and less lagginess (alpha) because the community does not need to wait for the arrival of key decayers to act on the wood substrate.  
 Hyp-Alt: Greater saprotroph and basidiomycete richness will lead to worse-fitting decay models (ne.r2), slower decay (k), and more lagginess (alpha) because decayers will be allocating more of their resources to combat one another.
-```{r}
+```{r, echo=FALSE}
 
 # summarize the presence of ... in each sample
 sapro.df<-Calc_richOTUtype(colNam="Trophic.Mode", grepTerm="Sapro", taxAndFunguild, comm.otu=comm.otu)  
@@ -451,11 +451,11 @@ basidList<-Plot_richOTUtype(rich.spdf = basidrich.spdf,
 
 **No pattern**
 
-```{r}
-#anova(mod.sapro.r2)
-#anova(mod.sapro.k)
-#anova(mod.sapro.t70)
-#anova(mod.sapro.alpha) #marginally-signif
+```{r, echo=FALSE}
+anova(mod.sapro.r2)
+anova(mod.sapro.k)
+anova(mod.sapro.t70)
+anova(mod.sapro.alpha) #marginally-signif
 #sapList[['alpha']]
 ```
 
@@ -463,16 +463,16 @@ basidList<-Plot_richOTUtype(rich.spdf = basidrich.spdf,
 
 **No pattern**
 
-```{r}
-#anova(mod.basid.r2)
-#anova(mod.basid.k)
-#anova(mod.basid.t70)
-#anova(mod.basid.alpha)
+```{r, echo=FALSE}
+anova(mod.basid.r2)
+anova(mod.basid.k)
+anova(mod.basid.t70)
+anova(mod.basid.alpha)
 ```
 
 
 *Hyp:* Greater pathogen and oomycete richness will lead to worse-fitting decay models (ne.r2), slower decay (k), and more lagginess (alpha) because the presence of these organisms will inhibit the establishment and activity of decayers.
-```{r}
+```{r, echo=FALSE}
 
 # summarize the presence of ... in each sample
 path.df<-Calc_richOTUtype(colNam="Trophic.Mode", grepTerm="Patho", taxAndFunguild, comm.otu=comm.otu)
@@ -506,11 +506,11 @@ ooList<-Plot_richOTUtype(rich.spdf=oomyrich.spdf,
 
 **No pattern**
 
-```{r}
-#anova(mod.path.r2)
-#anova(mod.path.k)
-#anova(mod.path.t70)
-#anova(mod.path.alpha) #marginally signif
+```{r, echo=FALSE}
+anova(mod.path.r2)
+anova(mod.path.k)
+anova(mod.path.t70)
+anova(mod.path.alpha) #marginally signif
 #pathList[['alpha']]
 ```
 
@@ -518,11 +518,11 @@ ooList<-Plot_richOTUtype(rich.spdf=oomyrich.spdf,
 
 **No pattern**
 
-```{r}
-#anova(mod.oomy.r2)
-#anova(mod.oomy.k)
-#anova(mod.oomy.t70)
-#anova(mod.oomy.alpha)
+```{r, echo=FALSE}
+anova(mod.oomy.r2)
+anova(mod.oomy.k)
+anova(mod.oomy.t70)
+anova(mod.oomy.alpha)
 ```
 
 
@@ -534,7 +534,7 @@ ooList<-Plot_richOTUtype(rich.spdf=oomyrich.spdf,
 
 *Hyp:* After accounting for variation in decay due to wood traits, average initial microbial diversity (richness, Shannon diversity, ... add phylogenetic diversity) will predict variation in decay model fit (r2), rate (k), and lagginess (alpha).
 
-```{r, include=FALSE, results=FALSE, message=FALSE}
+```{r, echo=FALSE}
 
 #run lm mods on wood trait residuals
 mod.rich<-FitResid_diversity(rich.spdf=rich.spdf, trait.residuals)
@@ -559,7 +559,7 @@ p.oomy<-PlotResid_diversity(rich.spdf=oomyrich.spdf, trait.residuals, xlab="Oomy
 **No pattern**
 
 ```{r, echo=FALSE}
-#lapply(mod.rich, anova)
+lapply(mod.rich, anova)
 ```
 
 ### Shannon's H
@@ -567,7 +567,7 @@ p.oomy<-PlotResid_diversity(rich.spdf=oomyrich.spdf, trait.residuals, xlab="Oomy
 **No pattern**
 
 ```{r, echo=FALSE}
-#lapply(mod.H, anova)
+lapply(mod.H, anova)
 ```
 
 ### Saprotroph richness
@@ -575,7 +575,7 @@ p.oomy<-PlotResid_diversity(rich.spdf=oomyrich.spdf, trait.residuals, xlab="Oomy
 **No pattern**
 
 ```{r, echo=FALSE}
-#lapply(mod.sapro, anova) #marginally signif alpha
+lapply(mod.sapro, anova) #marginally signif alpha
 #summary(mod.sapro[['alpha']])
 #p.sapro[['alpha']]
 ```
@@ -585,7 +585,7 @@ p.oomy<-PlotResid_diversity(rich.spdf=oomyrich.spdf, trait.residuals, xlab="Oomy
 **No pattern**
 
 ```{r, echo=FALSE}
-#lapply(mod.basid, anova)
+lapply(mod.basid, anova)
 ```
 
 ### Pathogen richness
@@ -603,7 +603,7 @@ lapply(mod.path, anova) #marginally signif for alpha
 **No pattern**
 
 ```{r, echo=FALSE}
-#lapply(mod.oomy, anova)
+lapply(mod.oomy, anova)
 ```
 
 
